--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Get Out (by Jordan Peele)</title>
 </head>
 
 <body>
 
-  <h1>Toto je nadpis</h1>
+
+
 </body>
 
 </html>
